# near-ai-oracle

./: Cargo.toml  README.md
src/: completions.rs  events.rs  lib.rs
