[package]
name = "contract"
version = "0.1.0"
authors = ["Vadim Ilin <vadim@near.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.7.0", features = ["legacy", "unit-testing"] }
base64 = "0.21.7"
sha2 = "0.10.8"
schemars = "0.8"
serde_json = { version = "1.0.133", features = ["preserve_order"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true